--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path angularapp  --aot --prod"
+  },
+  "engines": {
+    "node": "v12.16.1",
+    "npm": "6.13.4"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.6",
     "@angular/cdk": "^9.2.2",
+    "@angular/cli": "^10.0.3",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
+    "@angular/compiler-cli": "^9.1.12",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
     "@angular/material": "^9.2.2",
@@ -22,14 +29,17 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.2",
+    "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
-    "@angular/cli": "~9.0.6",
-    "@angular/compiler-cli": "~9.0.6",
+    "@angular/cli": "^10.0.3",
+    "@angular/compiler-cli": "^9.1.12",
     "@angular/language-service": "~9.0.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
