--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.2",
-    "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -55,6 +54,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "^3.9.7"
   }
 }
